--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,7 @@
 {
-  "singleQuote": true,
-  "semi": false,
-  "tabWidth": 4
+    "singleQuote": true,
+    "semi": false,
+    "tabWidth": 4,
+    "bracketSameLine": false,
+    "arrowParens": "avoid"
 }
